fixed button spacing

--- a/src/styles/components/contactForm.scss
+++ b/src/styles/components/contactForm.scss
@@ -15,6 +15,7 @@
   }
   .Button {
     width: 250px;
+    margin-top: $spacing--500;
   }
   &-message {
     padding: $spacing--500;
